// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextInputModal should render with a blank input field 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "opacity": 0,
        },
      }
    }
    jestInlineStyle={
      [
        {
          "backgroundColor": "#000000",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "backgroundColor": "#000000",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />,
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "translateY": 1334,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignSelf": "flex-end",
          "backgroundColor": "rgba(255, 255, 255, .37)",
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "flexShrink": 1,
          "overflow": "hidden",
          "paddingLeft": 10,
          "paddingRight": 10,
          "width": 590,
        },
        {
          "borderColor": "rgba(255, 255, 255, 0)",
          "borderWidth": 0,
          "marginBottom": -84,
          "paddingBottom": 94,
          "paddingTop": 0,
        },
      ]
    }
    nativeID="1"
    style={
      [
        {
          "alignSelf": "flex-end",
          "backgroundColor": "rgba(255, 255, 255, .37)",
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "flexShrink": 1,
          "overflow": "hidden",
          "paddingLeft": 10,
          "paddingRight": 10,
          "width": 590,
        },
        {
          "transform": [
            {
              "translateY": 1334,
            },
          ],
        },
        {
          "borderColor": "rgba(255, 255, 255, 0)",
          "borderWidth": 0,
          "marginBottom": -84,
          "paddingBottom": 94,
          "paddingTop": 0,
        },
      ]
    }
  >
    <BlurView
      blurType="dark"
      overlayColor="rgba(0, 0, 0, 0)"
      style={
        [
          {
            "backgroundColor": undefined,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 16,
          },
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "hsla(0, 0%, 53%, 0.3)",
            "borderRadius": 2,
            "height": 5,
            "marginTop": 5,
            "width": 59,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "marginBottom": 10,
          "marginTop": 25,
        }
      }
    >
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={2}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
            },
            {
              "flexShrink": 1,
              "fontFamily": "Quicksand-Medium",
              "fontSize": 24,
              "marginHorizontal": 10,
            },
            null,
          ]
        }
      >
        title
      </Text>
    </View>
    <View
      fullHeight={false}
      style={
        {
          "flexGrow": undefined,
          "flexShrink": 1,
        }
      }
    >
      <Text
        adjustsFontSizeToFit={false}
        numberOfLines={0}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
            },
            {
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
            },
            false,
            null,
          ]
        }
      >
        message
      </Text>
      <View
        marginRemStyle={
          {
            "marginBottom": 10,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 10,
          }
        }
        multiline={false}
        style={
          {
            "flexGrow": undefined,
            "flexShrink": undefined,
            "marginBottom": 10,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 10,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={false}
          collapsable={false}
          disableAnimation={0}
          focusAnimation={0}
          focusable={true}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "backgroundColor": "rgba(255, 255, 255, 0.2)",
                "borderColor": "rgba(0, 241, 162, 0)",
                "marginHorizontal": 0,
                "opacity": 1,
                "paddingVertical": 20,
              },
            }
          }
          jestInlineStyle={
            [
              {
                "alignItems": "center",
                "borderRadius": 10,
                "borderWidth": 1,
                "flexDirection": "row",
                "flexGrow": undefined,
                "flexShrink": undefined,
                "paddingHorizontal": 15,
              },
            ]
          }
          multiline={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          scale={1}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 10,
                "borderWidth": 1,
                "flexDirection": "row",
                "flexGrow": undefined,
                "flexShrink": undefined,
                "paddingHorizontal": 15,
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.2)",
                "borderColor": "rgba(0, 241, 162, 0)",
                "marginHorizontal": 0,
                "opacity": 1,
                "paddingVertical": 20,
              },
            ]
          }
        >
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {
                  "opacity": 0,
                  "width": 0,
                },
              }
            }
            jestInlineStyle={
              [
                {
                  "alignItems": "stretch",
                  "aspectRatio": 1,
                },
              ]
            }
            nativeID="3"
            scale={0}
            style={
              [
                {
                  "alignItems": "stretch",
                  "aspectRatio": 1,
                },
                {
                  "opacity": 0,
                  "width": 0,
                },
              ]
            }
          />
          <View
            collapsable={false}
            focusValue={0}
            hasPlaceholder={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {
                  "marginBottom": undefined,
                  "marginTop": undefined,
                },
              }
            }
            jestInlineStyle={
              [
                {
                  "alignItems": "flex-start",
                  "alignSelf": "flex-start",
                  "flex": 1,
                  "flexDirection": "row",
                  "left": 0,
                },
              ]
            }
            nativeID="4"
            style={
              [
                {
                  "alignItems": "flex-start",
                  "alignSelf": "flex-start",
                  "flex": 1,
                  "flexDirection": "row",
                  "left": 0,
                },
                {
                  "marginBottom": undefined,
                  "marginTop": undefined,
                },
              ]
            }
          >
            <TextInput
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              accessible={true}
              autoFocus={true}
              collapsable={false}
              defaultValue=""
              disableAnimation={0}
              editable={true}
              focusAnimation={0}
              forwardedRef={[Function]}
              jestAnimatedProps={
                {
                  "value": {},
                }
              }
              jestAnimatedStyle={
                {
                  "value": {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontSize": 20,
                  },
                }
              }
              jestInlineStyle={
                [
                  {
                    "color": "hsla(0, 0%, 100%, 0.20)",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontFamily": "Quicksand-Regular",
                    "margin": 0,
                    "paddingHorizontal": 0,
                    "paddingVertical": 0,
                    "transform": [
                      {
                        "translateY": -0,
                      },
                    ],
                  },
                ]
              }
              multiline={false}
              nativeID="5"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              scale={1}
              selectionColor="rgba(255, 255, 255, .25)"
              style={
                [
                  {
                    "color": "hsla(0, 0%, 100%, 0.20)",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontFamily": "Quicksand-Regular",
                    "margin": 0,
                    "paddingHorizontal": 0,
                    "paddingVertical": 0,
                    "transform": [
                      {
                        "translateY": -0,
                      },
                    ],
                  },
                  {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontSize": 20,
                  },
                ]
              }
              testID="undefined.textInput"
              textAlignVertical="top"
            />
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "marginHorizontal": -20,
                "marginVertical": -25,
                "opacity": 1,
                "paddingHorizontal": 20,
                "paddingVertical": 25,
              }
            }
            testID="undefined.clearIcon"
          >
            <View
              collapsable={false}
              jestAnimatedProps={
                {
                  "value": {},
                }
              }
              jestAnimatedStyle={
                {
                  "value": {
                    "opacity": 0,
                    "width": 0,
                  },
                }
              }
              jestInlineStyle={
                [
                  {
                    "alignItems": "stretch",
                    "aspectRatio": 1,
                  },
                ]
              }
              nativeID="6"
              scale={0}
              style={
                [
                  {
                    "alignItems": "stretch",
                    "aspectRatio": 1,
                  },
                  {
                    "opacity": 0,
                    "width": 0,
                  },
                ]
              }
            >
              <Text
                collapsable={false}
                jestAnimatedProps={
                  {
                    "value": {},
                  }
                }
                jestAnimatedStyle={
                  {
                    "value": {
                      "color": "rgba(255, 255, 255, 0.5019607843137255)",
                      "fontFamily": "anticon",
                      "fontSize": 0,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                  }
                }
                jestInlineStyle={{}}
                nativeID="7"
                style={
                  [
                    {
                      "color": "rgba(255, 255, 255, 0.5019607843137255)",
                      "fontFamily": "anticon",
                      "fontSize": 0,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        absolute={false}
        layout="column"
        parentType="modal"
        style={
          {
            "alignItems": "stretch",
            "alignSelf": "center",
            "flexDirection": "column",
            "margin": 10,
            "marginBottom": 20,
            "marginTop": 39,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "stretch",
                "alignSelf": "stretch",
                "flexBasis": "auto",
                "flexGrow": 0,
                "flexShrink": 0,
                "padding": undefined,
              },
              {
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={10}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 29,
                "height": 59,
                "justifyContent": "center",
                "opacity": 1,
                "overflow": "visible",
                "paddingHorizontal": 29,
                "paddingVertical": 0,
                "position": "relative",
              }
            }
          >
            <BVLinearGradient
              colors={
                [
                  4280299823,
                  4278214733,
                ]
              }
              endPoint={
                {
                  "x": 1,
                  "y": 0,
                }
              }
              locations={null}
              startPoint={
                {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                {
                  "borderRadius": 29,
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={true}
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 20,
                      "includeFontPadding": false,
                    },
                    [
                      {
                        "includeFontPadding": false,
                      },
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "Quicksand-Medium",
                        "fontSize": 20,
                      },
                      null,
                    ],
                    null,
                  ]
                }
              >
                Submit
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`TextInputModal should render with a populated input field 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "opacity": 0,
        },
      }
    }
    jestInlineStyle={
      [
        {
          "backgroundColor": "#000000",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "backgroundColor": "#000000",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />,
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "translateY": 1334,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignSelf": "flex-end",
          "backgroundColor": "rgba(255, 255, 255, .37)",
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "flexShrink": 1,
          "overflow": "hidden",
          "paddingLeft": 10,
          "paddingRight": 10,
          "width": 590,
        },
        {
          "borderColor": "rgba(255, 255, 255, 0)",
          "borderWidth": 0,
          "marginBottom": -84,
          "paddingBottom": 94,
          "paddingTop": 0,
        },
      ]
    }
    nativeID="9"
    style={
      [
        {
          "alignSelf": "flex-end",
          "backgroundColor": "rgba(255, 255, 255, .37)",
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "flexShrink": 1,
          "overflow": "hidden",
          "paddingLeft": 10,
          "paddingRight": 10,
          "width": 590,
        },
        {
          "transform": [
            {
              "translateY": 1334,
            },
          ],
        },
        {
          "borderColor": "rgba(255, 255, 255, 0)",
          "borderWidth": 0,
          "marginBottom": -84,
          "paddingBottom": 94,
          "paddingTop": 0,
        },
      ]
    }
  >
    <BlurView
      blurType="dark"
      overlayColor="rgba(0, 0, 0, 0)"
      style={
        [
          {
            "backgroundColor": undefined,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 16,
          },
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "hsla(0, 0%, 53%, 0.3)",
            "borderRadius": 2,
            "height": 5,
            "marginTop": 5,
            "width": 59,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "marginBottom": 10,
          "marginTop": 25,
        }
      }
    >
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={2}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
            },
            {
              "flexShrink": 1,
              "fontFamily": "Quicksand-Medium",
              "fontSize": 24,
              "marginHorizontal": 10,
            },
            null,
          ]
        }
      >
        title
      </Text>
    </View>
    <View
      fullHeight={false}
      style={
        {
          "flexGrow": undefined,
          "flexShrink": 1,
        }
      }
    >
      <Text
        adjustsFontSizeToFit={false}
        numberOfLines={0}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
            },
            {
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
            },
            false,
            null,
          ]
        }
      >
        message
      </Text>
      <View
        marginRemStyle={
          {
            "marginBottom": 10,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 10,
          }
        }
        multiline={false}
        style={
          {
            "flexGrow": undefined,
            "flexShrink": undefined,
            "marginBottom": 10,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 10,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={false}
          collapsable={false}
          disableAnimation={0}
          focusAnimation={0}
          focusable={true}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "backgroundColor": "rgba(255, 255, 255, 0.2)",
                "borderColor": "rgba(0, 241, 162, 0)",
                "marginHorizontal": 0,
                "opacity": 1,
                "paddingVertical": 20,
              },
            }
          }
          jestInlineStyle={
            [
              {
                "alignItems": "center",
                "borderRadius": 10,
                "borderWidth": 1,
                "flexDirection": "row",
                "flexGrow": undefined,
                "flexShrink": undefined,
                "paddingHorizontal": 15,
              },
            ]
          }
          multiline={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          scale={1}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 10,
                "borderWidth": 1,
                "flexDirection": "row",
                "flexGrow": undefined,
                "flexShrink": undefined,
                "paddingHorizontal": 15,
              },
              {
                "backgroundColor": "rgba(255, 255, 255, 0.2)",
                "borderColor": "rgba(0, 241, 162, 0)",
                "marginHorizontal": 0,
                "opacity": 1,
                "paddingVertical": 20,
              },
            ]
          }
        >
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {
                  "opacity": 0,
                  "width": 0,
                },
              }
            }
            jestInlineStyle={
              [
                {
                  "alignItems": "stretch",
                  "aspectRatio": 1,
                },
              ]
            }
            nativeID="11"
            scale={0}
            style={
              [
                {
                  "alignItems": "stretch",
                  "aspectRatio": 1,
                },
                {
                  "opacity": 0,
                  "width": 0,
                },
              ]
            }
          />
          <View
            collapsable={false}
            focusValue={1}
            hasPlaceholder={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {
                  "marginBottom": undefined,
                  "marginTop": undefined,
                },
              }
            }
            jestInlineStyle={
              [
                {
                  "alignItems": "flex-start",
                  "alignSelf": "flex-start",
                  "flex": 1,
                  "flexDirection": "row",
                  "left": 0,
                },
              ]
            }
            nativeID="12"
            style={
              [
                {
                  "alignItems": "flex-start",
                  "alignSelf": "flex-start",
                  "flex": 1,
                  "flexDirection": "row",
                  "left": 0,
                },
                {
                  "marginBottom": undefined,
                  "marginTop": undefined,
                },
              ]
            }
          >
            <TextInput
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              accessible={true}
              autoFocus={true}
              collapsable={false}
              defaultValue="initialValue"
              disableAnimation={0}
              editable={true}
              focusAnimation={0}
              forwardedRef={[Function]}
              jestAnimatedProps={
                {
                  "value": {},
                }
              }
              jestAnimatedStyle={
                {
                  "value": {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontSize": 20,
                  },
                }
              }
              jestInlineStyle={
                [
                  {
                    "color": "hsla(0, 0%, 100%, 0.20)",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontFamily": "Quicksand-Regular",
                    "margin": 0,
                    "paddingHorizontal": 0,
                    "paddingVertical": 0,
                    "transform": [
                      {
                        "translateY": -0,
                      },
                    ],
                  },
                ]
              }
              multiline={false}
              nativeID="13"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              scale={1}
              selectionColor="rgba(255, 255, 255, .25)"
              style={
                [
                  {
                    "color": "hsla(0, 0%, 100%, 0.20)",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontFamily": "Quicksand-Regular",
                    "margin": 0,
                    "paddingHorizontal": 0,
                    "paddingVertical": 0,
                    "transform": [
                      {
                        "translateY": -0,
                      },
                    ],
                  },
                  {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontSize": 20,
                  },
                ]
              }
              testID="undefined.textInput"
              textAlignVertical="top"
            />
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "marginHorizontal": -20,
                "marginVertical": -25,
                "opacity": 1,
                "paddingHorizontal": 20,
                "paddingVertical": 25,
              }
            }
            testID="undefined.clearIcon"
          >
            <View
              collapsable={false}
              jestAnimatedProps={
                {
                  "value": {},
                }
              }
              jestAnimatedStyle={
                {
                  "value": {
                    "opacity": 20,
                    "width": 20,
                  },
                }
              }
              jestInlineStyle={
                [
                  {
                    "alignItems": "stretch",
                    "aspectRatio": 1,
                  },
                ]
              }
              nativeID="14"
              scale={20}
              style={
                [
                  {
                    "alignItems": "stretch",
                    "aspectRatio": 1,
                  },
                  {
                    "opacity": 20,
                    "width": 20,
                  },
                ]
              }
            >
              <Text
                collapsable={false}
                jestAnimatedProps={
                  {
                    "value": {},
                  }
                }
                jestAnimatedStyle={
                  {
                    "value": {
                      "color": "rgba(255, 255, 255, 0.5019607843137255)",
                      "fontFamily": "anticon",
                      "fontSize": 20,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                  }
                }
                jestInlineStyle={{}}
                nativeID="15"
                style={
                  [
                    {
                      "color": "rgba(255, 255, 255, 0.5019607843137255)",
                      "fontFamily": "anticon",
                      "fontSize": 20,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        absolute={false}
        layout="column"
        parentType="modal"
        style={
          {
            "alignItems": "stretch",
            "alignSelf": "center",
            "flexDirection": "column",
            "margin": 10,
            "marginBottom": 20,
            "marginTop": 39,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "stretch",
                "alignSelf": "stretch",
                "flexBasis": "auto",
                "flexGrow": 0,
                "flexShrink": 0,
                "padding": undefined,
              },
              {
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={10}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 29,
                "height": 59,
                "justifyContent": "center",
                "opacity": 1,
                "overflow": "visible",
                "paddingHorizontal": 29,
                "paddingVertical": 0,
                "position": "relative",
              }
            }
          >
            <BVLinearGradient
              colors={
                [
                  4280299823,
                  4278214733,
                ]
              }
              endPoint={
                {
                  "x": 1,
                  "y": 0,
                }
              }
              locations={null}
              startPoint={
                {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                {
                  "borderRadius": 29,
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={true}
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 20,
                      "includeFontPadding": false,
                    },
                    [
                      {
                        "includeFontPadding": false,
                      },
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "Quicksand-Medium",
                        "fontSize": 20,
                      },
                      null,
                    ],
                    null,
                  ]
                }
              >
                Submit
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;
